--- a/estate_nursery/views/estate_nursery_recovery.xml
+++ b/estate_nursery/views/estate_nursery_recovery.xml
@@ -87,12 +87,14 @@
                             <group>
                                 <field name="selection_id"  required="1" options="{'no_create_edit': True}" string="Selection"
                                        domain="[('qty_recovery','>',0),('flag_recovery','=',1)]"/>
+                                <field name="date_planted"/>
                                 <field name="recovery_date" string="Recovery Date" required="1" attrs="{'readonly': [('state','=','done')]}"/>
                             </group>
 
                             <group coolspan="10">
                                 <field name="culling_location_id" string="Culling location"
                                         attrs="{'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
+                                <field name="qty_selec_recovery" string="QTY Selection Recovery" readonly="1"/>
                                 <field name="qty_total" string="Quantity Total" attrs="{'required': [('state','=','draft')],
                                  'readonly': [('state','!=','draft')]}"/>
                             </group>
