--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -195,7 +195,7 @@
             <field name="model">estate.nursery.selection</field>
             <field name="arch" type="xml">
                 <tree string="Nursery selection View"
-                      colors="red:state=='draft';red:state=='confirmed'; black:state=='done'">
+                      colors="red:state=='draft';red:state=='confirmed'; black:state=='done'" delete="false">
                     <field name="selection_code" string="Selection No"/>
                     <field name="selection_date"/>
                     <field name="selectionstage_id" />
@@ -260,7 +260,7 @@
                                 <field name="batch_id" attrs="{'required': [('state','=','draft')],
                                 'readonly': [('state','=','done')]}" domain="[('batch_id','=',batch_id)]"
                                   invisible="1"/>
-                                <field name="selectionstage_id" attrs="{'readonly': [('state','!=','draft')]}"
+                                <field name="selectionstage_id" attrs="{'readonly': [('state','=','done')]}"
                                        options="{'no_create_edit': True}"/>
                                 <field name="date_plant" attrs="{'required': [('state','=','draft')]}" readonly="1"/>
                                 <field name="selection_date"
