--- a/estate_nursery/views/estate_nursery_view.xml
+++ b/estate_nursery/views/estate_nursery_view.xml
@@ -205,9 +205,16 @@
                                 states="confirmed"
                                 groups="estate.group_manager"/>
 
-                        <button name="%(action_list_transfermn)d"
+                        <button name="%(reportplantation_seedreceived_batch)d"
+                                string="Print Seed Receive" states="done" type="action" icon="gtk-print"/>
+
+                        <button name="%(launch_transfermn_wizard)d"
                                 type='action' string='Transfer Seed PtM'
                                 states='done' groups="estate.group_manager"/>
+
+                        <button name="%(action_list_transfermn)d"
+                                string="Request Mn" states="done" type="action" />
+
 
                         <!--<button name="signal_selection_batch" type="workflow"-->
                                 <!--string="Selection"-->
