--- a/estate_nursery/reports/requestplanting_report.xml
+++ b/estate_nursery/reports/requestplanting_report.xml
@@ -59,7 +59,7 @@
                         <tbody class="request_tbody">
                             <tr t-foreach="o.requestline_ids" t-as="l">
                                 <td style="width:40%;"><span t-field="l.inherit_location_id"/></td>
-                                <td style="width:10%;"><span t-field="l.Luas"/></td>
+                                <td style="width:10%;"><span t-field="l.large_area"/></td>
                                 <td style="width:20%;"><span t-field="l.qty_request"/></td>
                                 <td style="width:30%;"><span t-field="l.comment"/></td>
                             </tr>
