--- a/estate_nursery/views/estate_nursery_transfermn.xml
+++ b/estate_nursery/views/estate_nursery_transfermn.xml
@@ -77,9 +77,8 @@
 
                         <group>
                             <group>
-                                <field name="batch_id" attrs="{'required': [('state','=','draft')],
-                                'readonly': [('state','=','done')]}" domain="[('batch_id','=',batch_id)]"
-                                  invisible="1"/>
+                                <field name="batch_id" readonly="1" domain="[('batch_id','=',batch_id)]"
+                                  invisible="0"/>
                                 <field name="location_mn_id" string="Location To" attrs="{'readonly': [('state','=','done')]}"
                                        options="{'no_create_edit': True}"/>
                                 <field name="qty_move" readonly="1"/>
