--- a/estate_nursery/views/estate_nursery_transfermn.xml
+++ b/estate_nursery/views/estate_nursery_transfermn.xml
@@ -65,12 +65,12 @@
                          <div class="oe_title" colors="blue">
                              <h1>
                                  <label string="Transfer Mn For Batch "
-                                       attrs="{'invisible': [('state_tf','not in',('draft','sent','bid'))]}"/>
+                                       attrs="{'invisible': [('state','not in',('draft','sent','bid'))]}"/>
                                  <label string="Transfer Mn  "
-                                       attrs="{'invisible': [('state_tf','in',('draft','sent','bid'))]}"/>
+                                       attrs="{'invisible': [('state','in',('draft','sent','bid'))]}"/>
                                  <field name="transfermn_code" class="oe_inline" readonly="1" />
                                  <label string="For "
-                                       attrs="{'invisible': [('state_tf','in',('draft','sent','bid'))]}"/>
+                                       attrs="{'invisible': [('state','in',('draft','sent','bid'))]}"/>
                                  <field name="batch_id" class="oe_inline" readonly="1" />
                              </h1>
                          </div>
@@ -79,14 +79,14 @@
                             <group>
                                 <field name="batch_id" readonly="1" domain="[('batch_id','=',batch_id)]"
                                   invisible="0"/>
-                                <field name="location_mn_id" string="Location To" attrs="{'readonly': [('state_tf','=','done')]}"
+                                <field name="location_mn_id" string="Location To" attrs="{'readonly': [('state','=','done')]}"
                                        options="{'no_create_edit': True}"/>
                                 <field name="qty_move" readonly="1"/>
                             </group>
 
                             <group coolspan="10">
                                 <field name="date_transfer"
-                                       attrs="{'readonly': [('state_tf','=','done')]}"/>
+                                       attrs="{'readonly': [('state','=','done')]}"/>
                             </group>
                         </group>
 
@@ -94,8 +94,8 @@
                             <notebook>
                                 <page string="Transfer  Information">
                                         <tree>
-                                            <field name="transfermnline_ids" track_visibility="onchange" attrs="{'required': [('state_tf','=','draft')],
-                                                'readonly': [('state_tf','=','done')]}"
+                                            <field name="transfermnline_ids" track_visibility="onchange" attrs="{'required': [('state','=','draft')],
+                                                'readonly': [('state','=','done')]}"
                                                    context="{'tree_view_ref' : 'estate_nursery.view_tree_transfermnline_seed'}"/>
                                         </tree>
                                 </page>
