--- a/estate_nursery/views/estate_nursery_cleaving_seed_view.xml
+++ b/estate_nursery/views/estate_nursery_cleaving_seed_view.xml
@@ -3,12 +3,12 @@
         <!--view Graph Cleaving line-->
         <record id="view_graph_cleaving_nursery" model ="ir.ui.view">
             <field name="name">graph cleaving abnormal</field>
-            <field name="model">estate.nursery.cleavingln</field>
+            <field name="model">estate.nursery.cleaving</field>
             <field name="arch" type="xml">
                    <graph string="Graph Cleaving Abnormal Seed" type="pivot">
-                       <field name="cleaving_id" string="Selection"/>
-                       <field name="qty_normal_double" type="measure" string="Qty Normal"/>
-                       <field name="qty_abnormal_double" type="measure"  sum="Qty Abnormal"/>
+                       <field name="batch_id" string="Cleaving"/>
+                       <field name="qty_total" type="measure" string="Qty Normal"/>
+                       <field name="qty_abnormal" type="measure"  sum="Qty Abnormal"/>
                    </graph>
             </field>
         </record>
@@ -85,7 +85,7 @@
                                 groups="estate.group_manager"/>
 
                         <button name="%(custom_report_cleaving_batch)d"
-                                type='action' string='Transfer Seed PtM' icon="gtk-print"
+                                type='action' string='Print Report Cleaving' icon="gtk-print"
                                 states='done' groups="estate.group_manager"/>
 
                         <field name="state" widget="statusbar"
@@ -122,6 +122,7 @@
                                         attrs="{'readonly': [('state','=','done')]}" invisible="1"/>
                                 <field name="qty_total" string="Quantity Total" attrs="{'required': [('state','=','draft')],
                                  'readonly': [('state','!=','draft')]}"/>
+                                <field name="qty_abnormal" string="Quantity Total Abnormal" readonly="1"/>
                             </group>
                         </group>
                             <notebook>
@@ -150,7 +151,6 @@
                     <field name="qty_single" string="&#931; Batch single" readonly="1">{‘readonly_by_pass’: True}</field>
                     <field name="qty_double" string="&#931; Batch Double" readonly="1">{‘readonly_by_pass’: True}</field>
                     <field name="qty_normal_double" string="Nor Cleaving" />
-                    <field name="qty_abnormal_double" string="Abn Cleaving"/>
                     <field name="location_type" string="Location virtual" readonly="1"/>
                     <field name="location_id" string="Location To" options="{'no_create_edit': True}"/>
                     <field name="comment" string="Description or Comment"/>
