--- a/estate_nursery/views/estate_nursery_recovery.xml
+++ b/estate_nursery/views/estate_nursery_recovery.xml
@@ -21,9 +21,11 @@
             <field name="arch" type="xml">
                 <tree string="Nursery Recovery Tree View" delete="false">
                     <field name="recovery_code" string="Recovery ID"/>
+                    <field name="step_id"/>
                     <field name="recovery_date"/>
                     <field name="qty_recovery" string="QTY Selection Abnormal"/>
                     <field name="qty_normal" string="QTY Recovery Normal"/>
+                    <field name="qty_dead" string="QTY Recovery Dead"/>
                     <field name="qty_abnormal" string="QTY Recovery Abnormal"/>
                     <field name="qty_total" string="&#931;  Saldo Total."/>
                 </tree>
@@ -85,9 +87,8 @@
 
                         <group>
                             <group>
-                                <field name="batch_id" invisible="1"/>
-                                <field name="selection_id"  required="1" options="{'no_create_edit': True}" string="Selection"
-                                       domain="[('qty_recovery','>',0),('flag_recovery','=',1)]"/>
+                                <field name="batch_id" invisible="0"/>
+                                <field name="step_id"/>
                                 <field name="date_planted"/>
                                 <field name="recovery_date" string="Recovery Date" required="1" attrs="{'readonly': [('state','=','done')]}"/>
                             </group>
@@ -95,7 +96,6 @@
                             <group coolspan="10">
                                 <field name="culling_location_id" string="Culling location"
                                         attrs="{'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
-                                <field name="qty_selec_recovery" string="QTY Selection Recovery" readonly="1">{‘readonly_by_pass’: True}</field>
                                 <field name="qty_total" string="Quantity Total" attrs="{'required': [('state','=','draft')],
                                  'readonly': [('state','!=','draft')]}"/>
                             </group>
@@ -108,6 +108,7 @@
                             </group>
                             <group>
                                 <field name="qty_normal" readonly="1" string="Quantity Normal">{‘readonly_by_pass’: True}</field>
+                                <field name="qty_dead" readonly="1" string="Quantity Dead">{‘readonly_by_pass’: True}</field>
                                 <field name="qty_abnormal" string="Quantity Abnormal " invisible="0"/>
                             </group>
                         </group>
@@ -137,6 +138,7 @@
                 <tree string="Nursery Recovery Line Tree View" editable="bottom">
                     <field name="recovery_seed_id" invisible="1"/>
                     <field name="qty_normal" string="Qty Normal"/>
+                    <field name="qty_dead" string="Qty Dead"/>
                     <field name="qty_abnormal" string="Qty Abnormal" readonly="1">{‘readonly_by_pass’: True}</field>
                     <field name="location_type" string="Location From" readonly="1"/>
                     <field name="location_id" string="Location To" options="{'no_create_edit': True}"/>
